--- a/mastermind/src/app/app.component.html
+++ b/mastermind/src/app/app.component.html
@@ -36,11 +36,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr *ngFor="let move of game.moves; let i = index">
-              <td>{{i+1}}</td>
-              <td>{{move.guess}}</td>
-              <td>{{move.evaluation}}</td>
-            </tr>
+            <History [array]="game.moves"></History>
           </tbody>
         </table>
     </div>
