--- a/mastermind/src/app/app.component.html
+++ b/mastermind/src/app/app.component.html
@@ -22,25 +22,22 @@
       </div>
     </div>
   </div>
+  <p></p>
   <div class="card">
     <div class="card-header">
       <h3 class="card-title">Moves</h3>
     </div>
     <div class="card-body">
-        <table  class="table table-bordered table-hover table-striped">
-          <thead>
-            <tr>
-              <th>No</th>
-              <th>Guess</th>
-              <th>Evaluation</th>
-            </tr>
-          </thead>
-          <tbody>
-            <History [array]="game.moves"></History>
-          </tbody>
-        </table>
+      <table class="table table-bordered table-hover table-striped table-responsive">
+        <thead>
+        <tr>
+          <th>No</th>
+          <th>Guess</th>
+          <th>Evaluation</th>
+        </tr>
+        </thead>
+        <History [array]="game.moves"></History>
+      </table>
     </div>
   </div>
 </div>
-
-<router-outlet></router-outlet>
