--- a/mastermind/src/app/history/history.component.html
+++ b/mastermind/src/app/history/history.component.html
@@ -1,3 +1,5 @@
+<tbody>
 <tr *ngFor="let move of history; let i = index">
-  <Move [move]="move" [rowid]="i" ></Move>
+  <Move [move]="move" [rowid]="i"></Move>
 </tr>
+<tbody>
