--- a/mastermind/src/app/history/history.component.html
+++ b/mastermind/src/app/history/history.component.html
@@ -1,3 +1,10 @@
+<thead>
+<tr>
+  <th>No</th>
+  <th>Guess</th>
+  <th>Evaluation</th>
+</tr>
+</thead>
 <tbody>
 <tr *ngFor="let move of history; let i = index">
   <Move [move]="move" [rowid]="i"></Move>
