--- a/mastermind/src/app/landingpage/landingpage.component.html
+++ b/mastermind/src/app/landingpage/landingpage.component.html
@@ -1,8 +1,11 @@
+<p></p>
 <div class="container">
   <div class="row">
     <div class="col-2">
+      <p></p>
       <a class="btn btn-success" routerLink="/gameconsole">Game Console</a>
-      <a class="btn btn-success" routerLink="/statistic">Game Statistic</a>
+      <p></p>
+      <a class="btn btn-info" routerLink="/statistic">Game Statistic</a>
     </div>
     <div class="col-10">
       <router-outlet></router-outlet>
