--- a/mastermind/src/app/loses/loses.component.html
+++ b/mastermind/src/app/loses/loses.component.html
@@ -1,2 +1,3 @@
-<p>You lose the game!</p>
-<a routerLink="/gameconsole">Want to continue the game!</a>
+<p></p>
+<p class="text-danger">You lose the game!</p>
+<a class="form-inline" routerLink="/gameconsole">Want to continue the game!</a>
