--- a/mastermind/src/app/wins/wins.component.html
+++ b/mastermind/src/app/wins/wins.component.html
@@ -1,2 +1,3 @@
-<p>You win the game!</p>
-<a routerLink="/gameconsole">Play new game!</a>
+<p></p>
+<p class="text-success">You win the game!</p>
+<a class="form-control" routerLink="/gameconsole">Play new game!</a>
