--- a/hr-frontend/src/app/app.component.html
+++ b/hr-frontend/src/app/app.component.html
@@ -99,7 +99,7 @@
           <tbody>
             <tr *ngFor="let emp of employees; let i = index">
                 <td>{{i+1}}</td>
-                <td><img [src]="emp.photo" style="width: 32px; height: 32px;"></td>
+                <td><img [src]="emp.photo" style="width: 32px; height: 32px;border-radius: 16px;"></td>
                 <td>{{emp.identityNo}}</td>
                 <td>{{emp.fullname}}</td>
                 <td>{{emp.iban}}</td>
