--- a/hr-frontend/src/app/app.component.html
+++ b/hr-frontend/src/app/app.component.html
@@ -4,86 +4,110 @@
     <div class="card-header">
       <h3 class="card-title">Employee</h3>
     </div>
+     <form #employeeForm="ngForm">
     <div class="card-body">
-      <div class="form-group">
-        <label for="identity">Identity No:</label>
-        <input type="text"
-               id="identity"
-               class="form-control"
-               required
-               tckimlikno
-               [(ngModel)]="employee.identityNo">
-      </div>
-      <div class="form-group">
-        <label for="fullname">Full name:</label>
-        <input type="text"
-               id="fullname"
-               class="form-control"
-               required
-               [minLength]="5"
-               pattern="[a-zA-Z ]+"
-               [(ngModel)]="employee.fullname">
-      </div>
-      <div class="form-group">
-        <label for="iban">Iban:</label>
-        <input type="text"
-               id="iban"
-               class="form-control"
-               [(ngModel)]="employee.iban">
-      </div>
-      <div class="form-group">
-        <label for="salary">Salary:</label>
-        <input type="text"
-               id="salary"
-               class="form-control"
-               [min]="2000"
-               [(ngModel)]="employee.salary">
-      </div>
-      <div class="form-group">
-        <label for="birthYear">Birth Year:</label>
-        <input type="text"
-               id="birthYear"
-               class="form-control"
-               [min]="1950"
-               [max]="2006"
-               [(ngModel)]="employee.birthYear">
-      </div>
-      <div class="form-group">
-        <label for="department">Department:</label>
-        <select id="department"
-                class="form-control"
-                [(ngModel)]="employee.department">
-          <option>IT</option>
-          <option>Sales</option>
-          <option>Finance</option>
-          <option>HR</option>
-        </select>
-      </div>
-      <div class="form-group">
-        <label for="photo">Photo:</label>
-        <img style="width: 64px; height: 64px;"
-             id="photo"
-             [src]="employee.photo">
-        <label class="btn btn-info btn-file">
-          <input type="file"
-                 (change)="loadPhoto($event)"
-                 style="display: none;">
-          <span>Browse</span>
-        </label>
-      </div>
-      <div class="form-group">
-        <button (click)="findByIdentity()"
-                 class="btn btn-success">Find By Identity</button>
-        <button (click)="hireEmployee()"
-                class="btn btn-success">Hire Employee</button>
-        <button (click)="updateEmployee()"
-                class="btn btn-warning">Update Employee</button>
-        <button (click)="fireEmployee()"
-                class="btn btn-danger">Fire Employee</button>
-        <button (click)="retrieveEmployees()"
-                class="btn btn-info">Retrieve Employees</button>
-     </div>
+        <div class="form-group">
+          <label for="identity">Identity No:</label>
+          <input type="text"
+                 id="identity"
+                 name="identityNo"
+                 class="form-control"
+                 required
+                 tckimlikno
+                 #identityNo="ngModel"
+                 [(ngModel)]="employee.identityNo">
+          <div class="alert alert-danger" *ngIf="identityNo.invalid">
+            <div *ngIf="identityNo.errors && identityNo.errors.required">Identity No is required!</div>
+            <div *ngIf="identityNo.errors && identityNo.errors.tckimlikno">This is not a valid identity no!</div>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label for="fullname">Full name:</label>
+          <input type="text"
+                 id="fullname"
+                 name="fullname"
+                 class="form-control"
+                 required
+                 [minLength]="5"
+                 pattern="[a-zA-Z ]+"
+                 [(ngModel)]="employee.fullname">
+        </div>
+        <div class="form-group">
+          <label for="iban">Iban:</label>
+          <input type="text"
+                 id="iban"
+                 name="iban"
+                 class="form-control"
+                 [(ngModel)]="employee.iban">
+        </div>
+        <div class="form-group">
+          <label for="salary">Salary:</label>
+          <input type="text"
+                 id="salary"
+                 name="salary"
+                 class="form-control"
+                 [min]="2000"
+                 [(ngModel)]="employee.salary">
+        </div>
+        <div class="form-group">
+          <label for="birthYear">Birth Year:</label>
+          <input type="text"
+                 id="birthYear"
+                 name="birthYear"
+                 class="form-control"
+                 [min]="1950"
+                 [max]="2006"
+                 [(ngModel)]="employee.birthYear">
+        </div>
+        <div class="form-group">
+          <label for="department">Department:</label>
+          <select id="department"
+                  name="department"
+                  class="form-control"
+                  [(ngModel)]="employee.department">
+            <option>IT</option>
+            <option>Sales</option>
+            <option>Finance</option>
+            <option>HR</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <label for="photo">Photo:</label>
+          <img style="width: 64px; height: 64px;"
+               id="photo"
+               [src]="employee.photo">
+          <label class="btn btn-info btn-file">
+            <input type="file"
+                   name="photo"
+                   (change)="loadPhoto($event)"
+                   style="display: none;">
+            <span>Browse</span>
+          </label>
+        </div>
+        <div class="form-group">
+          <button (click)="findByIdentity()"
+                  [disabled]="identityNo.invalid"
+                  class="btn btn-success">Find By Identity
+          </button>
+          <button (click)="hireEmployee()"
+                  [disabled]="employeeForm.invalid"
+                  class="btn btn-success">Hire Employee
+          </button>
+          <button (click)="updateEmployee()"
+                  [disabled]="employeeForm.invalid"
+                  class="btn btn-warning">Update Employee
+          </button>
+          <button (click)="fireEmployee()"
+                  [disabled]="identityNo.invalid"
+                  class="btn btn-danger">Fire Employee
+          </button>
+          <button (click)="retrieveEmployees()"
+                  class="btn btn-info">Retrieve Employees
+          </button>
+        </div>
     </div>
+    </form>
     <p></p>
     <div class="card">
       <div class="card-header">
@@ -105,30 +129,33 @@
           </tr>
           </thead>
           <tbody>
-            <tr *ngFor="let emp of employees; let i = index">
-                <td>{{i+1}}</td>
-                <td><img [src]="emp.photo" style="width: 32px; height: 32px;border-radius: 16px;"></td>
-                <td>{{emp.identityNo}}</td>
-                <td>{{emp.fullname}}</td>
-                <td>{{emp.iban}}</td>
-                <td>{{emp.salary | currency : '\u20ba'}}</td>
-                <td><span class="badge badge-info">{{emp.department}}</span></td>
-                <td><span class="badge badge-info">{{emp.fulltime ? 'FULL TIME' : 'PART TIME'}}</span></td>
-                <td><button (click)="fireEmployeeByIdentity(emp.identityNo)"
-                            class="btn btn-danger">Fire Employee</button></td>
-            </tr>
-            <tr>
-              <td colSpan="4"></td>
-              <th>Total Salary:</th>
-              <td>{{totalSalary | currency : '\u20ba'}}</td>
-              <td colSpan="3"></td>
-            </tr>
-            <tr>
-              <td colSpan="4"></td>
-              <th>Average Salary:</th>
-              <td>{{averageSalary | currency : '\u20ba'}}</td>
-              <td colSpan="3"></td>
-            </tr>
+          <tr *ngFor="let emp of employees; let i = index">
+            <td>{{i + 1}}</td>
+            <td><img [src]="emp.photo" style="width: 32px; height: 32px;border-radius: 16px;"></td>
+            <td>{{emp.identityNo}}</td>
+            <td>{{emp.fullname}}</td>
+            <td>{{emp.iban}}</td>
+            <td>{{emp.salary | currency : '\u20ba'}}</td>
+            <td><span class="badge badge-info">{{emp.department}}</span></td>
+            <td><span class="badge badge-info">{{emp.fulltime ? 'FULL TIME' : 'PART TIME'}}</span></td>
+            <td>
+              <button (click)="fireEmployeeByIdentity(emp.identityNo)"
+                      class="btn btn-danger">Fire Employee
+              </button>
+            </td>
+          </tr>
+          <tr>
+            <td colSpan="4"></td>
+            <th>Total Salary:</th>
+            <td>{{totalSalary | currency : '\u20ba'}}</td>
+            <td colSpan="3"></td>
+          </tr>
+          <tr>
+            <td colSpan="4"></td>
+            <th>Average Salary:</th>
+            <td>{{averageSalary | currency : '\u20ba'}}</td>
+            <td colSpan="3"></td>
+          </tr>
           </tbody>
         </table>
       </div>
