--- a/binance-frontend/src/app/app.component.html
+++ b/binance-frontend/src/app/app.component.html
@@ -17,4 +17,29 @@
       </div>
     </div>
   </div>
+  <div class="card">
+    <div class="card-header">
+      <h1 class="card-title">Trade Data</h1> <span class="badge badge-success">{{market.volume | currency }}</span>
+    </div>
+    <div class="card-body">
+      <table class="table table-hover table-bordered table-striped">
+        <thead>
+        <tr>
+          <th>No</th>
+          <th>Price</th>
+          <th>Quantity</th>
+          <th>Volume</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr *ngFor="let trade of market.trades; let i=index">
+          <td>{{i + 1}}</td>
+          <td>{{trade.price | currency  }}</td>
+          <td>{{trade.quantity | currency }}</td>
+          <td>{{trade.volume | currency }}</td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
